--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,7 +20,7 @@
         <div class="col-lg-12 text-center">
           <h1 class="mt-5">Shawn Chaudhry's Guestbook</h1>
           <p class="lead">Please sign my Guest Book by Clicking below:</p>
-            <button type="submit" id="submit" class="btn btn-primary" onclick="signGuestBook()">Submit</button>
+            <button type="submit" id="submit" class="btn btn-primary" onclick="LoadUrl('signup')">Submit</button>
         </div>
       </div>
     </div>
@@ -28,8 +28,4 @@
         <br>
         <br>
     </div>
-    <script>
-        function signGuestBook(){
-            window.location.href = "http://localhost:3002/signup"
-        }
-    </script>
+
